[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "heckler"
dynamic = ["version"]
description = "Detect dangerous invisible Unicode characters in source code and dependencies"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "heckler contributors" }]
keywords = ["security", "unicode", "glassworm", "trojan-source", "supply-chain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
heckler = "heckler.cli:cli_main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.4", "mypy>=1.0"]

[project.urls]
Repository = "https://github.com/kholcomb/heckler"
Issues = "https://github.com/kholcomb/heckler/issues"

[tool.hatch.version]
path = "src/heckler/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/heckler"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.9"
strict = true

[tool.heckler]
# Default config — can also use .heckler.yml
